5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_1329.log
== TEST (2019-03-19 18:17:06) 
-- CODE:
180
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:17:17) 
-- CODE:
180
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:17:47) 
-- CODE:
printy(180/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printy(180/3)
NameError: name 'printy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:01) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:04) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.16788
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:13) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.200191
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:15) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:17) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.156867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:18) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.183131
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:19) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.139362
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:20) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:24) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.116407
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:28) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:18:41) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.202438
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:20:25) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:20:27) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.15012
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:20:36) 
-- CODE:
print(180/3)
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:20:43) 
-- CODE:
print(180/3)
-- EXECUTION TIME:
0.189491
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:20:55) 
-- CODE:
print(180/4)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:20:56) 
-- CODE:
print(180/4)
-- EXECUTION TIME:
0.225264
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
